Add new bidi control characters defined in Unicode 6.3. Bug 922530, r=jfkthame